--- a/cec2020-esco/index.html
+++ b/cec2020-esco/index.html
@@ -558,75 +558,13 @@
 
 <p><strong>Dr. Yi Mei, Victoria University of Wellington, New Zealand (yi.mei@ecs.vuw.ac.nz)</strong></p>
 
-<p>Dr. Yi Mei is a Lecturer at the School of Engineering and Computer Science, Victoria University of Wellington, Wellington, New Zealand. He received his BSc and PhD degrees from University of Science and Technology of China in 2005 and 2010, respectively. His research interests include evolutionary computation in scheduling, routing and combinatorial optimisation, as well as evolutionary machine learning, genetic programming, feature selection and dimensional reduction. He has more than 50 fully referred publications, including the top journals in EC and Operations Research (OR) such as IEEE TEVC, IEEE Transactions on Cybernetics, European Journal of Operational Research, ACM Transactions on Mathematical Software. He is an Editorial Board Member of International Journal of Bio-Inspired Computation. He currently serves as a Vice-Chair of the IEEE CIS Emergent Technologies Technical Committee, and a member of three IEEE CIS Task Forces. He is a guest editor of a special issue of the Genetic Programming Evolvable Machine journal. He serves as a reviewer of over 25 international journals including the top journals in EC and OR.</p>
+<p>Dr. Yi Mei is a Lecturer at the School of Engineering and Computer Science, Victoria University of Wellington, Wellington, New Zealand. He received his BSc and PhD degrees from University of Science and Technology of China in 2005 and 2010, respectively. His research interests include evolutionary computation in scheduling, routing and combinatorial optimisation, as well as evolutionary machine learning, genetic programming, feature selection and dimensional reduction. He has more than 70 fully referred publications, including the top journals in EC and Operations Research (OR) such as IEEE TEVC, IEEE Transactions on Cybernetics, European Journal of Operational Research, ACM Transactions on Mathematical Software. He is an Editorial Board Member of International Journal of Bio-Inspired Computation. He serves as a Vice-Chair of the IEEE CIS Emergent Technologies Technical Committee, and a member of three IEEE CIS Task Forces. He is a Guest Editor of a special issue of the Genetic Programming Evolvable Machine journal. He serves as a reviewer of over 25 international journals including the top journals in EC and OR.</p>
 
 <p><strong>Dr. Gang (Aaron) Chen, Victoria University of Wellington, New Zealand (aaron.chen@ecs.vuw.ac.nz)</strong></p>
 
 <p>Dr Gang (Aaron) Chen is currently a senior lecturer in the School of Engineering and Computer Science at Victoria University of Wellington (VUW). He is also co-leading the strategic research direction on Evolutionary Scheduling and Combinatorial Optimization of the Evolutionary Computation Research Group at VUW. In the past, he worked as lecturer at Unitec Institute of Technology in New Zealand from 2010 to 2013 and visiting assistant professor in the School of Electrical and Electronic Engineering at Nanyang Technological University in Singapore from 2007 to 2010.</p>
 
 <p>His primary research interests include reinforcement learning and learning classifier systems, evolutionary computation for job shop scheduling and combinatorial optimization, and multi-agent and peer-to-peer systems. His works have been published in top peer-reviewed journals, including IEEE and ACM Transactions, in the area of machine learning, evolutionary computation, and distributed computing. Gang Chen is currently a member of IEEE and IEEE Computational Intelligence Society. He served as the guest editor of a special issue on &ldquo;Evolutionary Optimisation, Feature Reduction and Learning&rdquo; in the Soft Computing journal. In the recent years he was involved in the technical committees of various conferences in the area of artificial intelligence and evolutionary computation. He is also the reviewer of high-quality journals in the research field of evolutionary computation, machine learning, and distributed computing.</p>
-
-<h4 id="staff-members">Staff Members</h4>
-
-<ul>
-<li><a href="https://meiyi1986.github.io">Dr. Yi Mei (Coordinator)</a>: Evolutionary Combinatorial Optimisation, Hyper-heuristics, Genetic Programming, Dynamic Optimisation, Large-Scale Optimisation</li>
-<li><a href="http://homepages.ecs.vuw.ac.nz/~mengjie/">Prof. Mengjie Zhang</a>: Evolutionary Computation and Machine Learning, Genetic Programming, Image Processing, Feature Selection</li>
-<li><a href="http://ecs.victoria.ac.nz/Main/AaronChen">Dr. Aaron Chen</a>: Reinforcement Learning, NeuroEvolution (NEAT), Evolutionary Computation for Games, Evolutionary Scheduling</li>
-<li><a href="http://ecs.victoria.ac.nz/Main/HuiMa">Dr. Hui Ma</a>: Evolutionary Resource Allocation, Web Service Composition, Cloud Computing</li>
-<li><a href="https://ecs.victoria.ac.nz/Main/YahuiJia">Dr. Yahui Jia</a>: Evolutionary Combinatorial Optimisation, Large-Scale Optimisation</li>
-<li><a href="https://www.victoria.ac.nz/som/about/staff/vipul-jain">Dr. Vipul Jain</a>: Supply Chain Management, Operations Research</li>
-<li><a href="https://evoscheduling.wordpress.com/">Dr. Su Nguyen (La Trobe University, Australia)</a>: Evolutionary Scheduling and Combinatorial Optimisation, Hyper-heuristics, Genetic Programming</li>
-</ul>
-
-<h4 id="students">Students</h4>
-
-<ul>
-<li><a href="http://ecs.victoria.ac.nz/Main/GradMahdiAbdollahi">Mahdi Abdollahi</a></li>
-<li><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></li>
-<li><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a></li>
-<li><a href="https://ecs.victoria.ac.nz/Main/Kirita-RoseEscott">Kirita-Rose Escott</a></li>
-<li>Guanqiang Gao</li>
-<li><a href="https://www.victoria.ac.nz/architecture/research/current-phd-research/harry-yi-he">Harry He</a></li>
-<li><a href="https://ecs.victoria.ac.nz/Main/GradGuiyingHuang">Victoria Huang</a></li>
-<li>Jordan MacLaclan</li>
-<li><a href="https://ecs.victoria.ac.nz/Main/GradAtiyaMasood">Atiya Masood</a></li>
-<li><a href="https://www.victoria.ac.nz/som/research/phd/mgmt/amirhossein-mostofi">Amirhossein Mostofi</a></li>
-<li><a href="https://ecs.victoria.ac.nz/Main/GradSoheilaSadeghiram">Soheila Sadeghiram</a></li>
-<li><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></li>
-<li><a href="https://ecs.victoria.ac.nz/Main/GradBoxiongTan">Boxiong Tan</a></li>
-<li><a href="https://ecs.victoria.ac.nz/Main/GradChenWang">Chen Wang</a></li>
-<li><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></li>
-<li><a href="http://ecs.victoria.ac.nz/Main/GradFangfangZhang">Fangfang Zhang</a></li>
-</ul>
-
-<h4 id="alumni">Alumni</h4>
-
-<ul>
-<li><a href="https://www.researchgate.net/profile/Binzi_Xu">Binzi Xu</a> (Visiting student from Jiangnan University, 2018-2019)</li>
-<li><a href="https://ecs.victoria.ac.nz/Main/GradJohnPark">John Park (Graduated in 2019)</a></li>
-<li><a href="https://ecs.victoria.ac.nz/Main/GradDeepakKarunakaran">Deepak Karunakaran (Graduated in 2019)</a></li>
-<li><a href="https://ecs.victoria.ac.nz/Main/GradYimingPeng">Yiming Peng (Graduated in 2019, working in KPMG)</a></li>
-<li><a href="https://ecs.victoria.ac.nz/Main/AlexandreSawczukdaSilva">Dr. Alexandre Sawczuk da Silva (Graduated in 2018, working in Huawei Munich)</a></li>
-<li><a href="https://scholar.google.co.nz/citations?user=YctRNIMAAAAJ&hl=en">Yuxin Liu (Visiting student from Southwest University, 2017-2018, graduated in 2018, Lecturer in Shanghai Maritime University)</a></li></li>
-<li><a href="http://sms.victoria.ac.nz/Main/GradRachelHunt">Rachel Hunt (Graduated in 2016)</a></li></li>
-</ul>
-
-<h2 id="talks">Talks</h2>
-
-<p>We have regularly weekly meeting at <strong>3pm, Tuesdays</strong>, at <strong>CO431</strong> (<a href="/ecco-talks/">List of talks</a>).</p>
-
-<h2 id="visitors">Visitors</h2>
-
-<ul>
-<li>2019/09/10&ndash;2019/09/21, Sven Hartmann, Clausthal University, Austria.</li>
-<li>2019/06/15&ndash;2019/06/21, <strong><a href="https://www.wbs.ac.uk/about/person/juergen-branke/">Prof Juergen Branke</a></strong>, Professor of Operational Research, The University of Warwick, UK.</li>
-<li>2018/11/20, <strong><a href="https://www.rmit.edu.au/contact/staff-contacts/academic-staff/s/song-dr-andy">Dr Andy Song</a></strong>, Senior Lecturer, RMIT University, Australia.</li>
-<li>2018/04/27&ndash;2018/05/12, <strong><a href="https://www.wbs.ac.uk/about/person/juergen-branke/">Prof Juergen Branke</a></strong>, Professor of Operational Research, The University of Warwick, UK.</li>
-</ul>
-
-<h2 id="contact">Contact</h2>
-
-<p><a href="https://meiyi1986.github.io/#contact">Dr. Yi Mei (Coordinator)</a></p>
 
     </div>
 
