--- a/cec2020-esco/index.html
+++ b/cec2020-esco/index.html
@@ -407,7 +407,7 @@
   <h1 itemprop="name">Special Session: Evolutionary Scheduling and Combinatorial Optimization</h1>
 
   
-  <p class="page-subtitle">The IEEE World Congress on Computational Intelligence (WCCI) 2020, 19-24 Jul 2020, Glasgow, Scotland, UK</p>
+  <p class="page-subtitle">The IEEE World Congress on Computational Intelligence (WCCI) 2020<br/>19-24 Jul 2020, Glasgow, Scotland, UK</p>
   
 
   
