--- a/cec2020-esco/index.html
+++ b/cec2020-esco/index.html
@@ -516,24 +516,27 @@
 
 <p>We welcome the submissions of quality papers that effectively use the power of EC techniques to solve hard and practical scheduling and combinatorial optimization problems. Papers with rigorous analyses of EC techniques and innovative solutions to handle challenging issues in scheduling and combinatorial optimisation problems are also highly encouraged.</p>
 
-<p><strong>Topics of interest include, but not limited to:</strong>
-- Production scheduling
-- Timetabling
-- Vehicle routing
-- Project scheduling
-- Transport scheduling
-- Airport runway scheduling
-- Grid/cloud scheduling
-- Evolutionary scheduling with big data
-- Web service composition
-- SDN scheduling
-- 2D/3D strip packing
-- Resource allocation
-- Multi-objective scheduling
-- Complex combinatorial optimization with interdependent components
-- Automated heuristic design for combinatorial optimization
-- Dynamic combinatorial optimization
-- Innovative applications of evolutionary scheduling and combinatorial optimization</p>
+<p><strong>Topics of interest include, but not limited to:</strong></p>
+
+<ul>
+<li>Production scheduling</li>
+<li>Timetabling</li>
+<li>Vehicle routing</li>
+<li>Project scheduling</li>
+<li>Transport scheduling</li>
+<li>Airport runway scheduling</li>
+<li>Grid/cloud scheduling</li>
+<li>Evolutionary scheduling with big data</li>
+<li>Web service composition</li>
+<li>SDN scheduling</li>
+<li>2D/3D strip packing</li>
+<li>Resource allocation</li>
+<li>Multi-objective scheduling</li>
+<li>Complex combinatorial optimization with interdependent components</li>
+<li>Automated heuristic design for combinatorial optimization</li>
+<li>Dynamic combinatorial optimization</li>
+<li>Innovative applications of evolutionary scheduling and combinatorial optimization</li>
+</ul>
 
 <h2 id="submission-guideline">Submission Guideline</h2>
 
@@ -558,7 +561,9 @@
 
 <p><strong>Dr. Yi Mei, Victoria University of Wellington, New Zealand (yi.mei@ecs.vuw.ac.nz)</strong></p>
 
-<p>Dr. Yi Mei is a Lecturer at the School of Engineering and Computer Science, Victoria University of Wellington, Wellington, New Zealand. He received his BSc and PhD degrees from University of Science and Technology of China in 2005 and 2010, respectively. His research interests include evolutionary computation in scheduling, routing and combinatorial optimisation, as well as evolutionary machine learning, genetic programming, feature selection and dimensional reduction. He has more than 70 fully referred publications, including the top journals in EC and Operations Research (OR) such as IEEE TEVC, IEEE Transactions on Cybernetics, European Journal of Operational Research, ACM Transactions on Mathematical Software. He is an Editorial Board Member of International Journal of Bio-Inspired Computation. He serves as a Vice-Chair of the IEEE CIS Emergent Technologies Technical Committee, and a member of three IEEE CIS Task Forces. He is a Guest Editor of a special issue of the Genetic Programming Evolvable Machine journal. He serves as a reviewer of over 25 international journals including the top journals in EC and OR.</p>
+<p>Dr. Yi Mei is a Senior Lecturer at the School of Engineering and Computer Science, Victoria University of Wellington, Wellington, New Zealand. He received his BSc and PhD degrees from University of Science and Technology of China in 2005 and 2010, respectively. His research interests include evolutionary computation in scheduling, routing and combinatorial optimisation, as well as evolutionary machine learning, hyper-heuristics, genetic programming, feature selection and dimensional reduction.</p>
+
+<p>Yi has more than 70 fully referred publications, including the top journals in EC and Operations Research (OR) such as IEEE TEVC, IEEE Transactions on Cybernetics, European Journal of Operational Research, ACM Transactions on Mathematical Software, and top EC conferences (GECCO). He won an IEEE Transactions on Evolutionary Computation Outstanding Paper Award 2017, and a Victoria University of Wellington Early Research Excellence Award 2018. As the sole investigator, he won the 2nd prize of the Competition at IEEE WCCI 2014: Optimisation of Problems with Multiple Interdependent Components. He serves as a Vice-Chair of the IEEE CIS Emergent Technologies Technical Committee, and a member of three IEEE CIS Task Forces and two IEEE CIS Technical Committees. He is an Editorial Board Member of International Journal of Bio-Inspired Computation, an Associate Editor of International Journal of Applied Evolutionary Computation, and a guest editor of a special issue of the Genetic Programming Evolvable Machine journal. He has organised a number of special sessions in international conferences such as IEEE CEC. He serves as a reviewer of over 30 international journals including the top journals in EC and OR. He was an Outstanding Reviewer for Applied Soft Computing in 2015 and 2017, and IEEE Transactions on Cybernetics in 2018.</p>
 
 <p><strong>Dr. Gang (Aaron) Chen, Victoria University of Wellington, New Zealand (aaron.chen@ecs.vuw.ac.nz)</strong></p>
 
