--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="2010/11/26, Whole Group, how to write good PhD thesis. 2019/11/19, Shaolin Wang, ensemble learning with genetic programming hyper-heuristic for uncertain arc routing problem. 2019/11/12, Whole Group, how to do literature review and write literature review. 2019/11/05, 3-minutes presentation practice, Tao Shi, Chen Wang, Shaolin Wang 2019/10/29, 3-minutes presentation practice, Kirita-Rose Escott, Soheila Sadeghiram, Mazhar Anzari Ardeh, Joao Costa 2019/10/22, 3-minutes presentation practice, Yahui Jia, Mahdi Abdollahi, Fangfang Zhang, Boxiong Tan 2019/10/15, Rhaz Solomon, GP with NEAT for bloat control.">
+  <meta name="description" content="2020/01/22, Whole Group, how to catch up conference deadlines. 2020/01/08, Whole Group, new year start off. 2019/11/26, Whole Group, how to write good PhD thesis. 2019/11/19, Shaolin Wang, ensemble learning with genetic programming hyper-heuristic for uncertain arc routing problem. 2019/11/12, Whole Group, how to do literature review and write literature review. 2019/11/05, 3-minutes presentation practice, Tao Shi, Chen Wang, Shaolin Wang 2019/10/29, 3-minutes presentation practice, Kirita-Rose Escott, Soheila Sadeghiram, Mazhar Anzari Ardeh, Joao Costa 2019/10/22, 3-minutes presentation practice, Yahui Jia, Mahdi Abdollahi, Fangfang Zhang, Boxiong Tan 2019/10/15, Rhaz Solomon, GP with NEAT for bloat control.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/ecco-talks/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco-talks/">
   <meta property="og:title" content="Talks of the ECCO group | Yi Mei @ VUW">
-  <meta property="og:description" content="2010/11/26, Whole Group, how to write good PhD thesis. 2019/11/19, Shaolin Wang, ensemble learning with genetic programming hyper-heuristic for uncertain arc routing problem. 2019/11/12, Whole Group, how to do literature review and write literature review. 2019/11/05, 3-minutes presentation practice, Tao Shi, Chen Wang, Shaolin Wang 2019/10/29, 3-minutes presentation practice, Kirita-Rose Escott, Soheila Sadeghiram, Mazhar Anzari Ardeh, Joao Costa 2019/10/22, 3-minutes presentation practice, Yahui Jia, Mahdi Abdollahi, Fangfang Zhang, Boxiong Tan 2019/10/15, Rhaz Solomon, GP with NEAT for bloat control."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="2020/01/22, Whole Group, how to catch up conference deadlines. 2020/01/08, Whole Group, new year start off. 2019/11/26, Whole Group, how to write good PhD thesis. 2019/11/19, Shaolin Wang, ensemble learning with genetic programming hyper-heuristic for uncertain arc routing problem. 2019/11/12, Whole Group, how to do literature review and write literature review. 2019/11/05, 3-minutes presentation practice, Tao Shi, Chen Wang, Shaolin Wang 2019/10/29, 3-minutes presentation practice, Kirita-Rose Escott, Soheila Sadeghiram, Mazhar Anzari Ardeh, Joao Costa 2019/10/22, 3-minutes presentation practice, Yahui Jia, Mahdi Abdollahi, Fangfang Zhang, Boxiong Tan 2019/10/15, Rhaz Solomon, GP with NEAT for bloat control."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -503,7 +503,9 @@
 
     <div class="article-style" itemprop="articleBody">
       <ul>
-<li>2010/11/26, <strong>Whole Group</strong>, how to write good PhD thesis.</li>
+<li>2020/01/22, <strong>Whole Group</strong>, how to catch up conference deadlines.</li>
+<li>2020/01/08, <strong>Whole Group</strong>, new year start off.</li>
+<li>2019/11/26, <strong>Whole Group</strong>, how to write good PhD thesis.</li>
 <li>2019/11/19, <strong><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></strong>, ensemble learning with genetic programming hyper-heuristic for uncertain arc routing problem.</li>
 <li>2019/11/12, <strong>Whole Group</strong>, how to do literature review and write literature review.</li>
 <li>2019/11/05, 3-minutes presentation practice, <strong><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradChenWang">Chen Wang</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></strong></li>
