--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -26,7 +26,7 @@ Jordan MacLachlan, Yi&nbsp;Mei, Juergen Branke, and Mengjie Zhang.
   uncertain capacitated arc routing problems.
  <em>Evolutionary Computation</em>, nov 2019.
 [&nbsp;<a href="publication-accepted_bib.html#maclachlan2019genetic">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1162/evco_a_00267">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -53,7 +53,7 @@ Zhixing Huang, Jinghui Zhong, Liang Feng, Yi&nbsp;Mei, and Wentong Cai.
 [<a name="wang2019two">3</a>]
 </td>
 <td class="bibtexitem">
-Shaolin Wang, Yi&nbsp;Mei, Park John, and Mengjie Zhang.
+Shaolin Wang, Yi&nbsp;Mei, John Park, and Mengjie Zhang.
  A two-stage genetic programming hyper-heuristic for uncertain
   capacitated arc routing problem.
  In <em>Proceedings of IEEE Symposium Series on Computational
@@ -70,7 +70,7 @@ Shaolin Wang, Yi&nbsp;Mei, Park John, and Mengjie Zhang.
 [<a name="wang2019evolving">4</a>]
 </td>
 <td class="bibtexitem">
-Shaolin Wang, Yi&nbsp;Mei, Park John, and Mengjie Zhang.
+Shaolin Wang, Yi&nbsp;Mei, John Park, and Mengjie Zhang.
  Evolving ensembles of routing policies using genetic programming for
   uncertain capacitated arc routing problem.
  In <em>Proceedings of IEEE Symposium Series on Computational
