--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -15,7 +15,7 @@
   month = {nov},
   year = {2019},
   publisher = {MIT Press},
-  doi = {}
+  doi = {10.1162/evco_a_00267}
 }
 </pre>
 
@@ -34,7 +34,7 @@
 <a name="wang2019two"></a><pre>
 @inproceedings{<a href="publication-accepted.html#wang2019two">wang2019two</a>,
   title = {A Two-Stage Genetic Programming Hyper-Heuristic for Uncertain Capacitated Arc Routing Problem},
-  author = {Wang, Shaolin and Mei, Yi and Park John and Zhang, Mengjie},
+  author = {Wang, Shaolin and Mei, Yi and Park, John and Zhang, Mengjie},
   booktitle = {Proceedings of IEEE Symposium Series on Computational Intelligence (SSCI)},
   pages = {},
   year = {2019},
@@ -47,7 +47,7 @@
 <a name="wang2019evolving"></a><pre>
 @inproceedings{<a href="publication-accepted.html#wang2019evolving">wang2019evolving</a>,
   title = {Evolving Ensembles of Routing Policies using Genetic Programming for Uncertain Capacitated Arc Routing Problem},
-  author = {Wang, Shaolin and Mei, Yi and Park John and Zhang, Mengjie},
+  author = {Wang, Shaolin and Mei, Yi and Park, John and Zhang, Mengjie},
   booktitle = {Proceedings of IEEE Symposium Series on Computational Intelligence (SSCI)},
   pages = {},
   year = {2019},
