--- a/publication-journal.html
+++ b/publication-journal.html
@@ -18,7 +18,23 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="al2019survey">1</a>]
+[<a name="maclachlan2019genetic">1</a>]
+</td>
+<td class="bibtexitem">
+Jordan MacLachlan, Yi&nbsp;Mei, Juergen Branke, and Mengjie Zhang.
+ Genetic programming hyper-heuristics with vehicle collaboration for
+  uncertain capacitated arc routing problems.
+ <em>Evolutionary Computation</em>, nov 2019.
+[&nbsp;<a href="publication-journal_bib.html#maclachlan2019genetic">bib</a>&nbsp;| 
+<a href="https://doi.org/10.1162/evco_a_00267">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="al2019survey">2</a>]
 </td>
 <td class="bibtexitem">
 Harith Al-Sahaf, Ying Bi, Qi&nbsp;Chen, Andrew Lensen, Yi&nbsp;Mei, Yanan Sun, Binh Tran,
@@ -34,7 +50,7 @@ Harith Al-Sahaf, Ying Bi, Qi&nbsp;Chen, Andrew Lensen, Yi&nbsp;Mei, Yanan Sun, B
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="liu2019predictive">2</a>]
+[<a name="liu2019predictive">3</a>]
 </td>
 <td class="bibtexitem">
 Yuxin Liu, Yi&nbsp;Mei, Mengjie Zhang, and Zili Zhang.
@@ -50,7 +66,7 @@ Yuxin Liu, Yi&nbsp;Mei, Mengjie Zhang, and Zili Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="nguyen2018hybrid">3</a>]
+[<a name="nguyen2018hybrid">4</a>]
 </td>
 <td class="bibtexitem">
 Su&nbsp;Nguyen, Yi&nbsp;Mei, Bing Xue, and Mengjie Zhang.
@@ -66,7 +82,7 @@ Su&nbsp;Nguyen, Yi&nbsp;Mei, Bing Xue, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2018evolutionary">4</a>]
+[<a name="tan2018evolutionary">5</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -82,7 +98,7 @@ Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="xie2018bi">5</a>]
+[<a name="xie2018bi">6</a>]
 </td>
 <td class="bibtexitem">
 Jing Xie, Yi&nbsp;Mei, Andreas&nbsp;T Ernst, Xiaodong Li, and Andy Song.
@@ -99,7 +115,7 @@ Jing Xie, Yi&nbsp;Mei, Andreas&nbsp;T Ernst, Xiaodong Li, and Andy Song.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="park2018investigation">6</a>]
+[<a name="park2018investigation">7</a>]
 </td>
 <td class="bibtexitem">
 John Park, Yi&nbsp;Mei, Su&nbsp;Nguyen, Gang Chen, and Mengjie Zhang.
@@ -115,7 +131,7 @@ John Park, Yi&nbsp;Mei, Su&nbsp;Nguyen, Gang Chen, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="da2018evolutionary">7</a>]
+[<a name="da2018evolutionary">8</a>]
 </td>
 <td class="bibtexitem">
 Alexandre&nbsp;Sawczuk da&nbsp;Silva, Yi&nbsp;Mei, Hui Ma, and Mengjie Zhang.
@@ -131,7 +147,7 @@ Alexandre&nbsp;Sawczuk da&nbsp;Silva, Yi&nbsp;Mei, Hui Ma, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2017efficient">8</a>]
+[<a name="mei2017efficient">9</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Su&nbsp;Nguyen, Bing Xue, and Mengjie Zhang.
@@ -149,7 +165,7 @@ Yi&nbsp;Mei, Su&nbsp;Nguyen, Bing Xue, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="islam2017time">9</a>]
+[<a name="islam2017time">10</a>]
 </td>
 <td class="bibtexitem">
 Md&nbsp;Jakirul Islam, Xiaodong Li, and Yi&nbsp;Mei.
@@ -165,7 +181,7 @@ Md&nbsp;Jakirul Islam, Xiaodong Li, and Yi&nbsp;Mei.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="omidvar2017dg2">10</a>]
+[<a name="omidvar2017dg2">11</a>]
 </td>
 <td class="bibtexitem">
 Mohammad&nbsp;Nabi Omidvar, Ming Yang, Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
@@ -182,7 +198,7 @@ Mohammad&nbsp;Nabi Omidvar, Ming Yang, Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="nguyen2017genetic">11</a>]
+[<a name="nguyen2017genetic">12</a>]
 </td>
 <td class="bibtexitem">
 Su&nbsp;Nguyen, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -198,7 +214,7 @@ Su&nbsp;Nguyen, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="rahaman2017capra">12</a>]
+[<a name="rahaman2017capra">13</a>]
 </td>
 <td class="bibtexitem">
 Mohammad&nbsp;Saiedur Rahaman, Yi&nbsp;Mei, Margaret Hamilton, and Flora&nbsp;D Salim.
@@ -213,7 +229,7 @@ Mohammad&nbsp;Saiedur Rahaman, Yi&nbsp;Mei, Margaret Hamilton, and Flora&nbsp;D 
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2017memetic">13</a>]
+[<a name="zhang2017memetic">14</a>]
 </td>
 <td class="bibtexitem">
 Yuzhou Zhang, Yi&nbsp;Mei, Ke&nbsp;Tang, and Keqin Jiang.
@@ -230,7 +246,7 @@ Yuzhou Zhang, Yi&nbsp;Mei, Ke&nbsp;Tang, and Keqin Jiang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="liu2016analysis">14</a>]
+[<a name="liu2016analysis">15</a>]
 </td>
 <td class="bibtexitem">
 Jianhua Liu, Yi&nbsp;Mei, and Xiaodong Li.
@@ -247,7 +263,7 @@ Jianhua Liu, Yi&nbsp;Mei, and Xiaodong Li.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2016efficient">15</a>]
+[<a name="mei2016efficient">16</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Flora&nbsp;D Salim, and Xiaodong Li.
@@ -265,7 +281,7 @@ Yi&nbsp;Mei, Flora&nbsp;D Salim, and Xiaodong Li.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="consoli2016dynamic">16</a>]
+[<a name="consoli2016dynamic">17</a>]
 </td>
 <td class="bibtexitem">
 Pietro&nbsp;A Consoli, Yi&nbsp;Mei, Leandro&nbsp;L Minku, and Xin Yao.
@@ -281,7 +297,7 @@ Pietro&nbsp;A Consoli, Yi&nbsp;Mei, Leandro&nbsp;L Minku, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2016investigation">17</a>]
+[<a name="mei2016investigation">18</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
@@ -297,7 +313,7 @@ Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2016competitive">18</a>]
+[<a name="mei2016competitive">19</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, and Xin Yao.
@@ -315,7 +331,7 @@ Yi&nbsp;Mei, Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2014cooperative">19</a>]
+[<a name="mei2014cooperative">20</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
@@ -333,7 +349,7 @@ Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="omidvar2014cooperative">20</a>]
+[<a name="omidvar2014cooperative">21</a>]
 </td>
 <td class="bibtexitem">
 Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, Yi&nbsp;Mei, and Xin Yao.
@@ -351,7 +367,7 @@ Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, Yi&nbsp;Mei, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2011memetic">21</a>]
+[<a name="mei2011memetic">22</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
@@ -368,7 +384,7 @@ Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2011decomposition">22</a>]
+[<a name="mei2011decomposition">23</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
@@ -386,7 +402,7 @@ Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tang2009memetic">23</a>]
+[<a name="tang2009memetic">24</a>]
 </td>
 <td class="bibtexitem">
 Ke&nbsp;Tang, Yi&nbsp;Mei, and Xin Yao.
@@ -404,7 +420,7 @@ Ke&nbsp;Tang, Yi&nbsp;Mei, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2009global">24</a>]
+[<a name="mei2009global">25</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
