--- a/publication-journal_bib.html
+++ b/publication-journal_bib.html
@@ -7,7 +7,19 @@
 </head>
 
 <body>
-<h1>publication-journal.bib</h1><a name="al2019survey"></a><pre>
+<h1>publication-journal.bib</h1><a name="maclachlan2019genetic"></a><pre>
+@article{<a href="publication-journal.html#maclachlan2019genetic">maclachlan2019genetic</a>,
+  title = {Genetic Programming Hyper-Heuristics with Vehicle Collaboration for Uncertain Capacitated Arc Routing Problems},
+  author = {MacLachlan, Jordan and Mei, Yi and Branke, Juergen and Zhang, Mengjie},
+  journal = {Evolutionary Computation},
+  month = {nov},
+  year = {2019},
+  publisher = {MIT Press},
+  doi = {10.1162/evco_a_00267}
+}
+</pre>
+
+<a name="al2019survey"></a><pre>
 @article{<a href="publication-journal.html#al2019survey">al2019survey</a>,
   title = {A Survey on Evolutionary Machine Learning},
   author = {Al-Sahaf, Harith and Bi, Ying and Chen, Qi and Lensen, Andrew and Mei, Yi and Sun, Yanan and Tran, Binh and Xue, Bing and Zhang, Mengjie},
