--- a/404.html
+++ b/404.html
@@ -394,23 +394,23 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="/publication/maclachlan-2019-genetic/">Genetic Programming Hyper-Heuristics with Vehicle Collaboration for Uncertain Capacitated Arc Routing Problems</a></li>
+    <li><a href="/publication/tan-2020-group/">A Group Genetic Algorithm for Resource Allocation in Container-based Clouds</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/huang-2019-fast/">A fast parallel genetic programming framework with adaptively weighted primitives for symbolic regression</a></li>
+    <li><a href="/publication/da-2020-survey/">A Survey of Evolutionary Computation for Web Service Composition: A Technical Perspective</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/wang-2019-two/">A Two-Stage Genetic Programming Hyper-Heuristic for Uncertain Capacitated Arc Routing Problem</a></li>
+    <li><a href="/publication/tan-2020-nsga/">An NSGA-II-based Approach for Multi-objective Micro-service  Allocation in Container-based Clouds</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/wang-2019-evolving/">Evolving Ensembles of Routing Policies using Genetic Programming for Uncertain Capacitated Arc Routing Problem</a></li>
+    <li><a href="/publication/zhang-2020-genetic/">Genetic Programming with Adaptive Search Based on the Frequency of Features for Dynamic Flexible Job Shop Scheduling</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/masood-2019-genetic/">Genetic Programming with Pareto Local Search for Many-Objective Job Shop Scheduling</a></li>
+    <li><a href="/publication/zhang-2020-guided/">Guided Subtree Selection for Genetic Operators in Genetic Programming for Dynamic Flexible Job Shop Scheduling</a></li>
   </ul>
   
   
