--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -18,7 +18,91 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="maclachlan2019genetic">1</a>]
+[<a name="da2020survey">1</a>]
+</td>
+<td class="bibtexitem">
+Alexandre&nbsp;Sawczuk da&nbsp;Silva, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
+ A survey of evolutionary computation for web service composition: A
+  technical perspective.
+ <em>IEEE Transactions on Emerging Topics in Computational
+  Intelligence</em>, feb 2020.
+[&nbsp;<a href="publication-accepted_bib.html#da2020survey">bib</a>&nbsp;| 
+<a href="https://doi.org/10.1109/TETCI.2020.2969213">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="tan2020nsga">2</a>]
+</td>
+<td class="bibtexitem">
+Boxiong Tan, Hui Ma, and Yi&nbsp;Mei.
+ An nsga-ii-based approach for multi-objective micro-service
+  allocation in container-based clouds.
+ In <em>Proceedings of the CCGrid</em>. IEEE, feb 2020.
+[&nbsp;<a href="publication-accepted_bib.html#tan2020nsga">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="zhang2020guided">3</a>]
+</td>
+<td class="bibtexitem">
+Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
+ Guided subtree selection for genetic operators in genetic programming
+  for dynamic flexible job shop scheduling.
+ In <em>Proceedings of the European Conference on Genetic
+  Programming</em>. Springer, feb 2020.
+[&nbsp;<a href="publication-accepted_bib.html#zhang2020guided">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="zhang2020genetic">4</a>]
+</td>
+<td class="bibtexitem">
+Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
+ Genetic programming with adaptive search based on the frequency of
+  features for dynamic flexible job shop scheduling.
+ In <em>Proceedings of the European Conference on Evolutionary
+  Computation in Combinatorial Optimisation</em>. Springer, feb 2020.
+[&nbsp;<a href="publication-accepted_bib.html#zhang2020genetic">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="tan2020group">5</a>]
+</td>
+<td class="bibtexitem">
+Boxiong Tan, Hui Ma, and Yi&nbsp;Mei.
+ A group genetic algorithm for resource allocation in container-based
+  clouds.
+ In <em>Proceedings of the European Conference on Evolutionary
+  Computation in Combinatorial Optimisation</em>. Springer, feb 2020.
+[&nbsp;<a href="publication-accepted_bib.html#tan2020group">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="maclachlan2019genetic">6</a>]
 </td>
 <td class="bibtexitem">
 Jordan MacLachlan, Yi&nbsp;Mei, Juergen Branke, and Mengjie Zhang.
@@ -34,7 +118,7 @@ Jordan MacLachlan, Yi&nbsp;Mei, Juergen Branke, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="huang2019fast">2</a>]
+[<a name="huang2019fast">7</a>]
 </td>
 <td class="bibtexitem">
 Zhixing Huang, Jinghui Zhong, Liang Feng, Yi&nbsp;Mei, and Wentong Cai.
@@ -50,7 +134,7 @@ Zhixing Huang, Jinghui Zhong, Liang Feng, Yi&nbsp;Mei, and Wentong Cai.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="wang2019two">3</a>]
+[<a name="wang2019two">8</a>]
 </td>
 <td class="bibtexitem">
 Shaolin Wang, Yi&nbsp;Mei, John Park, and Mengjie Zhang.
@@ -67,7 +151,7 @@ Shaolin Wang, Yi&nbsp;Mei, John Park, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="wang2019evolving">4</a>]
+[<a name="wang2019evolving">9</a>]
 </td>
 <td class="bibtexitem">
 Shaolin Wang, Yi&nbsp;Mei, John Park, and Mengjie Zhang.
@@ -84,7 +168,7 @@ Shaolin Wang, Yi&nbsp;Mei, John Park, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="karunakaran2019multitasking">5</a>]
+[<a name="karunakaran2019multitasking">10</a>]
 </td>
 <td class="bibtexitem">
 Deepak Karunakaran, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -101,7 +185,7 @@ Deepak Karunakaran, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="masood2019genetic">6</a>]
+[<a name="masood2019genetic">11</a>]
 </td>
 <td class="bibtexitem">
 Atiya Masood, Gang Chen, Yi&nbsp;Mei, Harith Al-Sahaf, and Mengjie Zhang.
