--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,7 +7,71 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="maclachlan2019genetic"></a><pre>
+<h1>publication-accepted.bib</h1><a name="da2020survey"></a><pre>
+@article{<a href="publication-accepted.html#da2020survey">da2020survey</a>,
+  title = {A Survey of Evolutionary Computation for Web Service Composition: A Technical Perspective},
+  author = {da Silva, Alexandre Sawczuk and Ma, Hui and Mei, Yi and Zhang, Mengjie},
+  journal = {IEEE Transactions on Emerging Topics in Computational Intelligence},
+  month = {feb},
+  year = {2020},
+  publisher = {IEEE},
+  doi = {10.1109/TETCI.2020.2969213}
+}
+</pre>
+
+<a name="tan2020nsga"></a><pre>
+@inproceedings{<a href="publication-accepted.html#tan2020nsga">tan2020nsga</a>,
+  title = {An NSGA-II-based Approach for Multi-objective Micro-service  Allocation in Container-based Clouds},
+  author = {Tan, Boxiong and Ma, Hui and Mei, Yi},
+  booktitle = {Proceedings of the CCGrid},
+  pages = {},
+  year = {2020},
+  month = {feb},
+  organization = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="zhang2020guided"></a><pre>
+@inproceedings{<a href="publication-accepted.html#zhang2020guided">zhang2020guided</a>,
+  title = {Guided Subtree Selection for Genetic Operators in Genetic Programming for Dynamic Flexible Job Shop Scheduling},
+  author = {Zhang, Fangfang and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the European Conference on Genetic Programming},
+  pages = {},
+  year = {2020},
+  month = {feb},
+  organization = {Springer},
+  doi = {}
+}
+</pre>
+
+<a name="zhang2020genetic"></a><pre>
+@inproceedings{<a href="publication-accepted.html#zhang2020genetic">zhang2020genetic</a>,
+  title = {Genetic Programming with Adaptive Search Based on the Frequency of Features for Dynamic Flexible Job Shop Scheduling},
+  author = {Zhang, Fangfang and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the European Conference on Evolutionary Computation in Combinatorial Optimisation},
+  pages = {},
+  year = {2020},
+  month = {feb},
+  organization = {Springer},
+  doi = {}
+}
+</pre>
+
+<a name="tan2020group"></a><pre>
+@inproceedings{<a href="publication-accepted.html#tan2020group">tan2020group</a>,
+  title = {A Group Genetic Algorithm for Resource Allocation in Container-based Clouds},
+  author = {Tan, Boxiong and Ma, Hui and Mei, Yi},
+  booktitle = {Proceedings of the European Conference on Evolutionary Computation in Combinatorial Optimisation},
+  pages = {},
+  year = {2020},
+  month = {feb},
+  organization = {Springer},
+  doi = {}
+}
+</pre>
+
+<a name="maclachlan2019genetic"></a><pre>
 @article{<a href="publication-accepted.html#maclachlan2019genetic">maclachlan2019genetic</a>,
   title = {Genetic Programming Hyper-Heuristics with Vehicle Collaboration for Uncertain Capacitated Arc Routing Problems},
   author = {MacLachlan, Jordan and Mei, Yi and Branke, Juergen and Zhang, Mengjie},
