--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="2020/02/19 Shaolin Wang, presentation on recent work. 2020/02/12, Whole Group, Fangfang Zhang and Boxiong Tan, give presentation on accepted EvoStar papers. 2020/02/05, Whole Group, quick catch up. 2020/01/29, Whole Group, quick catch up. 2020/01/22, Whole Group, how to catch up conference deadlines. 2020/01/08, Whole Group, new year start off. 2019/11/26, Whole Group, how to write good PhD thesis. 2019/11/19, Shaolin Wang, ensemble learning with genetic programming hyper-heuristic for uncertain arc routing problem.">
+  <meta name="description" content="2020/02/19 Shaolin Wang, presentation on recent work. 2020/02/12, Fangfang Zhang and Boxiong Tan, give presentation on accepted EvoStar papers. 2020/02/05, Whole Group, quick catch up. 2020/01/29, Whole Group, quick catch up. 2020/01/22, Whole Group, how to catch up conference deadlines. 2020/01/08, Whole Group, new year start off. 2019/11/26, Whole Group, how to write good PhD thesis. 2019/11/19, Shaolin Wang, ensemble learning with genetic programming hyper-heuristic for uncertain arc routing problem.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/ecco-talks/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco-talks/">
   <meta property="og:title" content="Talks of the ECCO group | Yi Mei @ VUW">
-  <meta property="og:description" content="2020/02/19 Shaolin Wang, presentation on recent work. 2020/02/12, Whole Group, Fangfang Zhang and Boxiong Tan, give presentation on accepted EvoStar papers. 2020/02/05, Whole Group, quick catch up. 2020/01/29, Whole Group, quick catch up. 2020/01/22, Whole Group, how to catch up conference deadlines. 2020/01/08, Whole Group, new year start off. 2019/11/26, Whole Group, how to write good PhD thesis. 2019/11/19, Shaolin Wang, ensemble learning with genetic programming hyper-heuristic for uncertain arc routing problem."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="2020/02/19 Shaolin Wang, presentation on recent work. 2020/02/12, Fangfang Zhang and Boxiong Tan, give presentation on accepted EvoStar papers. 2020/02/05, Whole Group, quick catch up. 2020/01/29, Whole Group, quick catch up. 2020/01/22, Whole Group, how to catch up conference deadlines. 2020/01/08, Whole Group, new year start off. 2019/11/26, Whole Group, how to write good PhD thesis. 2019/11/19, Shaolin Wang, ensemble learning with genetic programming hyper-heuristic for uncertain arc routing problem."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -504,7 +504,7 @@
     <div class="article-style" itemprop="articleBody">
       <ul>
 <li>2020/02/19 <strong><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></strong>, presentation on recent work.</li>
-<li>2020/02/12, <strong>Whole Group</strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradFangFangZhang">Fangfang Zhang</a></strong> and <strong><a href="https://ecs.victoria.ac.nz/Main/GradBoxiongTan">Boxiong Tan</a></strong>, give presentation on accepted EvoStar papers.</li>
+<li>2020/02/12, <strong><a href="https://ecs.victoria.ac.nz/Main/GradFangFangZhang">Fangfang Zhang</a></strong> and <strong><a href="https://ecs.victoria.ac.nz/Main/GradBoxiongTan">Boxiong Tan</a></strong>, give presentation on accepted EvoStar papers.</li>
 <li>2020/02/05, <strong>Whole Group</strong>, quick catch up.</li>
 <li>2020/01/29, <strong>Whole Group</strong>, quick catch up.</li>
 <li>2020/01/22, <strong>Whole Group</strong>, how to catch up conference deadlines.</li>
