--- a/index.html
+++ b/index.html
@@ -2588,12 +2588,21 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
   <div class="col-12 col-lg-8">
     
 
+<h3 id="2020">2020</h3>
+
+<ul>
+<li><a href="http://www.victoria.ac.nz/courses/comp/261/2020/offering?crn=18314">Algorithms and Data Structures (COMP261)</a> <strong>[Course Coordinator]</strong></li>
+<li><a href="http://www.victoria.ac.nz/courses/comp/307/2020/offering?crn=968">Introduction to Artificial Intelligence (COMP307)</a></li>
+<li><a href="https://www.wgtn.ac.nz/courses/comp/420/2020/offering?crn=32151">Artificial Intelligence (COMP420)</a></li>
+<li><a href="https://www.victoria.ac.nz/courses/comp/422/2020/offering?crn=2324">Data Mining, Neural Networks and Genetic Programming (COMP422)</a> <strong>[Course Coordinator]</strong></li>
+</ul>
+
 <h3 id="2019">2019</h3>
 
 <ul>
 <li><a href="http://www.victoria.ac.nz/courses/comp/261/2019/offering?crn=18314">Algorithms and Data Structures (COMP261)</a> <strong>[Course Coordinator]</strong></li>
 <li><a href="http://www.victoria.ac.nz/courses/comp/307/2019/offering?crn=968">Introduction to Artificial Intelligence (COMP307)</a></li>
-<li><a href="https://www.victoria.ac.nz/courses/comp/422/2018/offering?crn=2324">Data Mining, Neural Networks and Genetic Programming (COMP422)</a> <strong>[Acting Course Coordinator]</strong></li>
+<li><a href="https://www.victoria.ac.nz/courses/comp/422/2019/offering?crn=2324">Data Mining, Neural Networks and Genetic Programming (COMP422)</a> <strong>[Acting Course Coordinator]</strong></li>
 </ul>
 
 <h3 id="2018">2018</h3>
