--- a/index.html
+++ b/index.html
@@ -2049,6 +2049,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/tan-2020-group/tan-2020-group.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -2167,6 +2171,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
   
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/da-2020-survey/da-2020-survey.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
@@ -2396,6 +2404,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/zhang-2020-genetic/zhang-2020-genetic.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -2507,6 +2519,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
   
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/zhang-2020-guided/zhang-2020-guided.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
