--- a/publication/index.html
+++ b/publication/index.html
@@ -891,6 +891,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/zhang-2020-guided/zhang-2020-guided.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -979,6 +983,10 @@
 
   
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/zhang-2020-genetic/zhang-2020-genetic.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
@@ -1165,6 +1173,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/da-2020-survey/da-2020-survey.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -1257,6 +1269,10 @@
 
   
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/tan-2020-group/tan-2020-group.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
