--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="2020/03/18, 2020/03/11, Joao Costa, research objectives for PhD proposals 2020/03/04, Mahdi Abdollahi, ontology-based data augmentation for medical text classification 2020/02/26, Victoria Huang, multi-agent reinforcement learning for online network controller scheduling 2020/02/19, Shaolin Wang, multi-objective genetic programming for evolving routing policies for uncertain arc routing. 2020/02/12, Fangfang Zhang and Boxiong Tan, give presentation on accepted EvoStar papers. 2020/02/05, Whole Group, quick catch up. 2020/01/29, Whole Group, quick catch up. 2020/01/22, Whole Group, how to catch up conference deadlines.">
+  <meta name="description" content="2020/03/25, Tao Shi 2020/03/18, Joao Costa, research objectives for PhD proposals, part 2 2020/03/11, Joao Costa, research objectives for PhD proposals 2020/03/04, Mahdi Abdollahi, ontology-based data augmentation for medical text classification 2020/02/26, Victoria Huang, multi-agent reinforcement learning for online network controller scheduling 2020/02/19, Shaolin Wang, multi-objective genetic programming for evolving routing policies for uncertain arc routing. 2020/02/12, Fangfang Zhang and Boxiong Tan, give presentation on accepted EvoStar papers. 2020/02/05, Whole Group, quick catch up.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/ecco-talks/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco-talks/">
   <meta property="og:title" content="Talks of the ECCO group | Yi Mei @ VUW">
-  <meta property="og:description" content="2020/03/18, 2020/03/11, Joao Costa, research objectives for PhD proposals 2020/03/04, Mahdi Abdollahi, ontology-based data augmentation for medical text classification 2020/02/26, Victoria Huang, multi-agent reinforcement learning for online network controller scheduling 2020/02/19, Shaolin Wang, multi-objective genetic programming for evolving routing policies for uncertain arc routing. 2020/02/12, Fangfang Zhang and Boxiong Tan, give presentation on accepted EvoStar papers. 2020/02/05, Whole Group, quick catch up. 2020/01/29, Whole Group, quick catch up. 2020/01/22, Whole Group, how to catch up conference deadlines."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="2020/03/25, Tao Shi 2020/03/18, Joao Costa, research objectives for PhD proposals, part 2 2020/03/11, Joao Costa, research objectives for PhD proposals 2020/03/04, Mahdi Abdollahi, ontology-based data augmentation for medical text classification 2020/02/26, Victoria Huang, multi-agent reinforcement learning for online network controller scheduling 2020/02/19, Shaolin Wang, multi-objective genetic programming for evolving routing policies for uncertain arc routing. 2020/02/12, Fangfang Zhang and Boxiong Tan, give presentation on accepted EvoStar papers. 2020/02/05, Whole Group, quick catch up."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -503,7 +503,8 @@
 
     <div class="article-style" itemprop="articleBody">
       <ul>
-<li>2020/03/18,</li>
+<li>2020/03/25, <strong><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></strong></li>
+<li>2020/03/18, <strong><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a>, research objectives for PhD proposals, part 2</li>
 <li>2020/03/11, <strong><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a>, research objectives for PhD proposals</li>
 <li>2020/03/04, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMahdiAbdollahi">Mahdi Abdollahi</a></strong>, ontology-based data augmentation for medical text classification</li>
 <li>2020/02/26, <strong><a href="https://ecs.victoria.ac.nz/Main/GradGuiyingHuang">Victoria Huang</a></strong>, multi-agent reinforcement learning for online network controller scheduling</li>
