--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -141,9 +141,9 @@ Shaolin Wang, Yi&nbsp;Mei, John Park, and Mengjie Zhang.
  A two-stage genetic programming hyper-heuristic for uncertain
   capacitated arc routing problem.
  In <em>Proceedings of IEEE Symposium Series on Computational
-  Intelligence (SSCI)</em>. IEEE, sep 2019.
+  Intelligence (SSCI)</em>, pages 1606--1613. IEEE, dec 2019.
 [&nbsp;<a href="publication-accepted_bib.html#wang2019two">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/SSCI44817.2019.9002912">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -158,9 +158,9 @@ Shaolin Wang, Yi&nbsp;Mei, John Park, and Mengjie Zhang.
  Evolving ensembles of routing policies using genetic programming for
   uncertain capacitated arc routing problem.
  In <em>Proceedings of IEEE Symposium Series on Computational
-  Intelligence (SSCI)</em>. IEEE, sep 2019.
+  Intelligence (SSCI)</em>, pages 1628--1635. IEEE, dec 2019.
 [&nbsp;<a href="publication-accepted_bib.html#wang2019evolving">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/SSCI44817.2019.9002749">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -175,9 +175,9 @@ Deepak Karunakaran, Yi&nbsp;Mei, and Mengjie Zhang.
  Multitasking genetic programming for stochastic team orienteering
   problem with time windows.
  In <em>Proceedings of IEEE Symposium Series on Computational
-  Intelligence (SSCI)</em>. IEEE, sep 2019.
+  Intelligence (SSCI)</em>, pages 1598--1605. IEEE, dec 2019.
 [&nbsp;<a href="publication-accepted_bib.html#karunakaran2019multitasking">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/SSCI44817.2019.9002804">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -192,9 +192,9 @@ Atiya Masood, Gang Chen, Yi&nbsp;Mei, Harith Al-Sahaf, and Mengjie Zhang.
  Genetic programming with pareto local search for many-objective job
   shop scheduling.
  In <em>Proceedings of the Australasian Joint Conference on
-  Artificial Intelligence (AI)</em>. Springer, sep 2019.
+  Artificial Intelligence (AI)</em>, pages 536--548. Springer, dec 2019.
 [&nbsp;<a href="publication-accepted_bib.html#masood2019genetic">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1007/978-3-030-35288-2_43">DOI</a>&nbsp;]
 
 </td>
 </tr>
