--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -100,11 +100,11 @@
   title = {A Two-Stage Genetic Programming Hyper-Heuristic for Uncertain Capacitated Arc Routing Problem},
   author = {Wang, Shaolin and Mei, Yi and Park, John and Zhang, Mengjie},
   booktitle = {Proceedings of IEEE Symposium Series on Computational Intelligence (SSCI)},
-  pages = {},
+  pages = {1606-1613},
   year = {2019},
-  month = {sep},
+  month = {dec},
   organization = {IEEE},
-  doi = {}
+  doi = {10.1109/SSCI44817.2019.9002912}
 }
 </pre>
 
@@ -113,11 +113,11 @@
   title = {Evolving Ensembles of Routing Policies using Genetic Programming for Uncertain Capacitated Arc Routing Problem},
   author = {Wang, Shaolin and Mei, Yi and Park, John and Zhang, Mengjie},
   booktitle = {Proceedings of IEEE Symposium Series on Computational Intelligence (SSCI)},
-  pages = {},
+  pages = {1628-1635},
   year = {2019},
-  month = {sep},
+  month = {dec},
   organization = {IEEE},
-  doi = {}
+  doi = {10.1109/SSCI44817.2019.9002749}
 }
 </pre>
 
@@ -126,11 +126,11 @@
   title = {Multitasking Genetic Programming for Stochastic Team Orienteering Problem with Time Windows},
   author = {Karunakaran, Deepak and Mei, Yi and Zhang, Mengjie},
   booktitle = {Proceedings of IEEE Symposium Series on Computational Intelligence (SSCI)},
-  pages = {},
+  pages = {1598-1605},
   year = {2019},
-  month = {sep},
+  month = {dec},
   organization = {IEEE},
-  doi = {}
+  doi = {10.1109/SSCI44817.2019.9002804}
 }
 </pre>
 
@@ -139,11 +139,11 @@
   title = {Genetic Programming with Pareto Local Search for Many-Objective Job Shop Scheduling},
   author = {Masood, Atiya and Chen, Gang and Mei, Yi and Al-Sahaf, Harith and Zhang, Mengjie},
   booktitle = {Proceedings of the Australasian Joint Conference on Artificial Intelligence (AI)},
-  pages = {},
+  pages = {536-548},
   year = {2019},
-  month = {sep},
+  month = {dec},
   organization = {Springer},
-  doi = {}
+  doi = {10.1007/978-3-030-35288-2_43}
 }
 </pre>
 
