--- a/404.html
+++ b/404.html
@@ -394,23 +394,23 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="/publication/tan-2020-group/">A Group Genetic Algorithm for Resource Allocation in Container-based Clouds</a></li>
+    <li><a href="/publication/masood-2020-fitness/">A Fitness-based Selection Method for Pareto Local Search for Many-Objective Job Shop Scheduling</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/da-2020-survey/">A Survey of Evolutionary Computation for Web Service Composition: A Technical Perspective</a></li>
+    <li><a href="/publication/gao-2020-memetic/">A Memetic Algorithm for the Task Allocation Problem on Multi-robot Multi-point Dynamic Aggregation Missions</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/tan-2020-nsga/">An NSGA-II-based Approach for Multi-objective Micro-service  Allocation in Container-based Clouds</a></li>
+    <li><a href="/publication/jia-2020-memetic/">A Memetic Level-based Learning Swarm Optimizer for Large-scale Water Distribution Network Optimization</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/zhang-2020-genetic/">Genetic Programming with Adaptive Search Based on the Frequency of Features for Dynamic Flexible Job Shop Scheduling</a></li>
+    <li><a href="/publication/wang-2020-multi/">A Multi-Objective Genetic Programming Hyper-Heuristic Approach to Uncertain Capacitated Arc Routing Problems</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/zhang-2020-guided/">Guided Subtree Selection for Genetic Operators in Genetic Programming for Dynamic Flexible Job Shop Scheduling</a></li>
+    <li><a href="/publication/costa-2020-cluster/">Cluster-based Hyper-Heuristic for the Large-Scale Vehicle Routing Problem</a></li>
   </ul>
   
   
