--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -18,7 +18,143 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="da2020survey">1</a>]
+[<a name="jia2020memetic">1</a>]
+</td>
+<td class="bibtexitem">
+Ya-Hui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
+ A memetic level-based learning swarm optimizer for large-scale water
+  distribution network optimization.
+ In <em>Proceedings of the ACM Genetic and Evolutionary Computation
+  Conference</em>. ACM, mar 2020.
+[&nbsp;<a href="publication-accepted_bib.html#jia2020memetic">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="zhang2020evolutionary">2</a>]
+</td>
+<td class="bibtexitem">
+Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
+ Evolutionary multitasking for dynamic flexible job shop scheduling
+  via genetic programming hyper-heuristics.
+ In <em>Proceedings of the ACM Genetic and Evolutionary Computation
+  Conference Companion</em>. ACM, mar 2020.
+[&nbsp;<a href="publication-accepted_bib.html#zhang2020evolutionary">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="wang2020multi">3</a>]
+</td>
+<td class="bibtexitem">
+Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
+ A multi-objective genetic programming hyper-heuristic approach to
+  uncertain capacitated arc routing problems.
+ In <em>Proceedings of the IEEE World Congress on Computational
+  Intelligence</em>. IEEE, mar 2020.
+[&nbsp;<a href="publication-accepted_bib.html#wang2020multi">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="jackson2020genetic">4</a>]
+</td>
+<td class="bibtexitem">
+Jericho Jackson, Yi&nbsp;Mei, and Mengjie Zhang.
+ Genetic programming hyper-heuristic with cluster awareness for
+  stochastic team orienteering problem with time windows.
+ In <em>Proceedings of the IEEE World Congress on Computational
+  Intelligence</em>. IEEE, mar 2020.
+[&nbsp;<a href="publication-accepted_bib.html#jackson2020genetic">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="costa2020cluster">5</a>]
+</td>
+<td class="bibtexitem">
+Joao Guilherme Cavalcanti&nbsp;Costa Costa, Yi&nbsp;Mei, and Mengjie Zhang.
+ Cluster-based hyper-heuristic for the large-scale vehicle routing
+  problem.
+ In <em>Proceedings of the IEEE World Congress on Computational
+  Intelligence</em>. IEEE, mar 2020.
+[&nbsp;<a href="publication-accepted_bib.html#costa2020cluster">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="gao2020memetic">6</a>]
+</td>
+<td class="bibtexitem">
+Guanqiang Gao, Yi&nbsp;Mei, Bin Xin, Ya-Hui Jia, and Will Browne.
+ A memetic algorithm for the task allocation problem on multi-robot
+  multi-point dynamic aggregation missions.
+ In <em>Proceedings of the IEEE World Congress on Computational
+  Intelligence</em>. IEEE, mar 2020.
+[&nbsp;<a href="publication-accepted_bib.html#gao2020memetic">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="ardeh2020genetic">7</a>]
+</td>
+<td class="bibtexitem">
+Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
+ Genetic programming hyper-heuristics with probabilistic prototype
+  tree knowledge transfer for uncertain capacitated arc routing problems.
+ In <em>Proceedings of the IEEE World Congress on Computational
+  Intelligence</em>. IEEE, mar 2020.
+[&nbsp;<a href="publication-accepted_bib.html#ardeh2020genetic">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="masood2020fitness">8</a>]
+</td>
+<td class="bibtexitem">
+Atiya Masood, Gang Chen, Yi&nbsp;Mei, Harith Al-Sahaf, and Mengjie Zhang.
+ A fitness-based selection method for pareto local search for
+  many-objective job shop scheduling.
+ In <em>Proceedings of the IEEE World Congress on Computational
+  Intelligence</em>. IEEE, mar 2020.
+[&nbsp;<a href="publication-accepted_bib.html#masood2020fitness">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="da2020survey">9</a>]
 </td>
 <td class="bibtexitem">
 Alexandre&nbsp;Sawczuk da&nbsp;Silva, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -35,7 +171,7 @@ Alexandre&nbsp;Sawczuk da&nbsp;Silva, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2020nsga">2</a>]
+[<a name="tan2020nsga">10</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, and Yi&nbsp;Mei.
@@ -51,7 +187,7 @@ Boxiong Tan, Hui Ma, and Yi&nbsp;Mei.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020guided">3</a>]
+[<a name="zhang2020guided">11</a>]
 </td>
 <td class="bibtexitem">
 Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -68,7 +204,7 @@ Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020genetic">4</a>]
+[<a name="zhang2020genetic">12</a>]
 </td>
 <td class="bibtexitem">
 Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -85,7 +221,7 @@ Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2020group">5</a>]
+[<a name="tan2020group">13</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, and Yi&nbsp;Mei.
@@ -102,7 +238,7 @@ Boxiong Tan, Hui Ma, and Yi&nbsp;Mei.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="maclachlan2019genetic">6</a>]
+[<a name="maclachlan2019genetic">14</a>]
 </td>
 <td class="bibtexitem">
 Jordan MacLachlan, Yi&nbsp;Mei, Juergen Branke, and Mengjie Zhang.
@@ -118,7 +254,7 @@ Jordan MacLachlan, Yi&nbsp;Mei, Juergen Branke, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="huang2019fast">7</a>]
+[<a name="huang2019fast">15</a>]
 </td>
 <td class="bibtexitem">
 Zhixing Huang, Jinghui Zhong, Liang Feng, Yi&nbsp;Mei, and Wentong Cai.
