--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,7 +7,111 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="da2020survey"></a><pre>
+<h1>publication-accepted.bib</h1><a name="jia2020memetic"></a><pre>
+@inproceedings{<a href="publication-accepted.html#jia2020memetic">jia2020memetic</a>,
+  title = {A Memetic Level-based Learning Swarm Optimizer for Large-scale Water Distribution Network Optimization},
+  author = {Jia, Ya-Hui and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the ACM Genetic and Evolutionary Computation Conference},
+  pages = {},
+  year = {2020},
+  month = {mar},
+  organization = {ACM},
+  doi = {}
+}
+</pre>
+
+<a name="zhang2020evolutionary"></a><pre>
+@inproceedings{<a href="publication-accepted.html#zhang2020evolutionary">zhang2020evolutionary</a>,
+  title = {Evolutionary Multitasking for Dynamic Flexible Job Shop Scheduling via Genetic Programming Hyper-heuristics},
+  author = {Zhang, Fangfang and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the ACM Genetic and Evolutionary Computation Conference Companion},
+  pages = {},
+  year = {2020},
+  month = {mar},
+  organization = {ACM},
+  doi = {}
+}
+</pre>
+
+<a name="wang2020multi"></a><pre>
+@inproceedings{<a href="publication-accepted.html#wang2020multi">wang2020multi</a>,
+  title = {A Multi-Objective Genetic Programming Hyper-Heuristic Approach to Uncertain Capacitated Arc Routing Problems},
+  author = {Wang, Shaolin and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
+  pages = {},
+  year = {2020},
+  month = {mar},
+  organization = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="jackson2020genetic"></a><pre>
+@inproceedings{<a href="publication-accepted.html#jackson2020genetic">jackson2020genetic</a>,
+  title = {Genetic Programming Hyper-heuristic with Cluster Awareness for Stochastic Team Orienteering Problem with Time Windows},
+  author = {Jackson, Jericho and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
+  pages = {},
+  year = {2020},
+  month = {mar},
+  organization = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="costa2020cluster"></a><pre>
+@inproceedings{<a href="publication-accepted.html#costa2020cluster">costa2020cluster</a>,
+  title = {Cluster-based Hyper-Heuristic for the Large-Scale Vehicle Routing Problem},
+  author = {Costa, Joao Guilherme Cavalcanti Costa and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
+  pages = {},
+  year = {2020},
+  month = {mar},
+  organization = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="gao2020memetic"></a><pre>
+@inproceedings{<a href="publication-accepted.html#gao2020memetic">gao2020memetic</a>,
+  title = {A Memetic Algorithm for the Task Allocation Problem on Multi-robot Multi-point Dynamic Aggregation Missions},
+  author = {Gao, Guanqiang and Mei, Yi and Xin, Bin and Jia, Ya-Hui and Browne, Will},
+  booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
+  pages = {},
+  year = {2020},
+  month = {mar},
+  organization = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="ardeh2020genetic"></a><pre>
+@inproceedings{<a href="publication-accepted.html#ardeh2020genetic">ardeh2020genetic</a>,
+  title = {Genetic Programming Hyper-Heuristics with Probabilistic Prototype Tree Knowledge Transfer for Uncertain Capacitated Arc Routing Problems},
+  author = {Ardeh, Mazhar Ansari and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
+  pages = {},
+  year = {2020},
+  month = {mar},
+  organization = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="masood2020fitness"></a><pre>
+@inproceedings{<a href="publication-accepted.html#masood2020fitness">masood2020fitness</a>,
+  title = {A Fitness-based Selection Method for Pareto Local Search for Many-Objective Job Shop Scheduling},
+  author = {Masood, Atiya and Chen, Gang and Mei, Yi and Al-Sahaf, Harith and Zhang, Mengjie},
+  booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
+  pages = {},
+  year = {2020},
+  month = {mar},
+  organization = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="da2020survey"></a><pre>
 @article{<a href="publication-accepted.html#da2020survey">da2020survey</a>,
   title = {A Survey of Evolutionary Computation for Web Service Composition: A Technical Perspective},
   author = {da Silva, Alexandre Sawczuk and Ma, Hui and Mei, Yi and Zhang, Mengjie},
