--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -89,7 +89,7 @@ Jericho Jackson, Yi&nbsp;Mei, and Mengjie Zhang.
 [<a name="costa2020cluster">5</a>]
 </td>
 <td class="bibtexitem">
-Joao Guilherme Cavalcanti&nbsp;Costa Costa, Yi&nbsp;Mei, and Mengjie Zhang.
+Joao Guilherme&nbsp;Cavalcanti Costa, Yi&nbsp;Mei, and Mengjie Zhang.
  Cluster-based hyper-heuristic for the large-scale vehicle routing
   problem.
  In <em>Proceedings of the IEEE World Congress on Computational
