--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -62,7 +62,7 @@
 <a name="costa2020cluster"></a><pre>
 @inproceedings{<a href="publication-accepted.html#costa2020cluster">costa2020cluster</a>,
   title = {Cluster-based Hyper-Heuristic for the Large-Scale Vehicle Routing Problem},
-  author = {Costa, Joao Guilherme Cavalcanti Costa and Mei, Yi and Zhang, Mengjie},
+  author = {Costa, Joao Guilherme Cavalcanti and Mei, Yi and Zhang, Mengjie},
   booktitle = {Proceedings of the IEEE World Congress on Computational Intelligence},
   pages = {},
   year = {2020},
